Add support for Windows